docker/kubernetes-ingress-trick/react-app.yml
# deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-container
        image: praveenjayakar/crypto-deploy-nginx:latest
        ports:
        - containerPort: 80

---
# service.yaml

apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
