docker/kubernetes-ingress-trick/minimal-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: todo-app
            port:
              number: 3000
